# drive

./: Cargo.toml  Makefile  README.md  build_deb.sh  config.toml.example  module.toml
.github/workflows/: build.yml
.sqlx/: query-16e7684d0fb79325245a9c47d19f4073957c0c9ed69464933adb7e93e5d33296.json  query-7a8d0470818a88b861c1a575b8e5b6f587bf6994e9864e7374eb2e6fbc81f9af.json  query-8b66414d60da87c76efd12ef3d25a8d00ecf3146c517af8d1d25953fce7b52ca.json  query-a517007537c6c61ea31ee0f8c2afffd41ebe35c2618a73fb494727fd348a2448.json  query-ad550eef6fe2794723fe224b74fa602a820912bc57208efa141f6e77f017f0a8.json  query-c572cb75023117898684369e9eaef4eb8e63d3a81899ebfea6a3fd89ec1f34a2.json  query-cd7e96afc7aafd5f82d3c97e2db0ab345b67d34272190fc91fd7285e0f952292.json  query-eb9da5baee2c475bde730fda576f33b3335034c92bacf8f089a53b84b6698c33.json
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: AdvancedShareDialog.tsx  ArchiveBrowser.tsx  DetailsPanel.tsx  DialogBreadcrumb.tsx  DialogTree.tsx  DriveApp.tsx  DriveLogo.tsx  DriveSettingsPage.tsx  DualPaneExplorer.tsx  DuplicatesDialog.tsx  Files3DViewer.tsx  FilesContextMenuItems.tsx  FilesDashboardWidget.tsx  FilesFilterPanel.tsx  FilesFloatingAudioPlayer.tsx  FilesFolderPickerDialog.tsx  FilesFontViewer.tsx  FilesNewActions.tsx  FilesOpenDialog.tsx  FilesPaintEditor.tsx  FilesRecentWidget.tsx  FilesSaveDialog.tsx  FilesSettingsPage.tsx  FilesStorageGauge.tsx  FilesStorageGaugeHeader.tsx  FilesStoragePage.tsx  FilesToolbar.tsx  FilesTreeSidebar.tsx  FilesWebDavSettings.tsx  FontsExplorer.tsx  ImageEditDialog.tsx  ImportUrlModal.tsx  ModuleMountExplorer.tsx  RemoteExplorer.tsx  RemoteStoragePanel.tsx  StorageInsightsDialog.tsx  SystemExplorer.tsx  TagUI.tsx  TrashStatsBanner.tsx  driveExtras.ts  (+6 more)
frontend/src/fonts/: fontMeta.ts
migrations/: 000001_drive_schema.down.sql  000001_drive_schema.up.sql  000002_drive_shares.down.sql  000002_drive_shares.up.sql  000003_drive_uploads.down.sql  000003_drive_uploads.up.sql  000004_drive_versions.down.sql  000004_drive_versions.up.sql  000005_drive_activity.down.sql  000005_drive_activity.up.sql  000006_drive_webdav.down.sql  000006_drive_webdav.up.sql  000007_drive_remotes.down.sql  000007_drive_remotes.up.sql  000008_folder_color.up.sql  000009_upload_overwrite.down.sql  000009_upload_overwrite.up.sql  000010_protected_folders.down.sql  000010_protected_folders.up.sql  000011_folder_trash.down.sql  000011_folder_trash.up.sql  000012_search_index.down.sql  000012_search_index.up.sql  000013_folder_icon.down.sql  000013_folder_icon.up.sql  000014_office_kb_extensions.down.sql  000014_office_kb_extensions.up.sql  000015_folders_is_hidden.down.sql  000015_folders_is_hidden.up.sql  000016_search_phash.down.sql  000016_search_phash.up.sql  000017_files_is_protected.down.sql  000017_files_is_protected.up.sql  000018_drive_system.down.sql  000018_drive_system.up.sql  000019_drive_sync.down.sql  000019_drive_sync.up.sql  000020_drive_idempotency.down.sql  000020_drive_idempotency.up.sql  000021_drive_tags.down.sql  (+9 more)
src/: client.rs  lib.rs  main.rs  state.rs
src/config/: settings.rs
src/errors/: mod.rs
src/events/: mod.rs
src/handlers/: access.rs  activity.rs  archive.rs  files.rs  folders.rs  health.rs  import_url.rs  insights.rs  ipc.rs  locks.rs  maintenance.rs  mod.rs  public.rs  remotes.rs  resolve.rs  saved_searches.rs  scan.rs  search.rs  shares.rs  sync.rs  system.rs  tags.rs  transform.rs  uploads.rs  versions.rs  webdav.rs
src/middleware/: idempotency.rs  mod.rs
src/models/: access.rs  file.rs  folder.rs  lock.rs  mod.rs  saved_search.rs  share.rs  tag.rs  upload.rs  version.rs
src/router/: mod.rs
src/services/: access.rs  activity.rs  archives.rs  embeddings.rs  extract.rs  files.rs  folders.rs  indexer.rs  insights.rs  locks.rs  maintenance.rs  mod.rs  phash.rs  saved_searches.rs  scanner.rs  search.rs  shares.rs  sync.rs  tags.rs  thumbnails.rs  uploads.rs  versions.rs  watcher.rs
