[package]
name        = "kubuno-drive"
version     = "0.1.0-alpha"
edition     = "2021"
description = "Kubuno Drive — module de gestion de fichiers"
license     = "AGPL-3.0"
repository  = "https://github.com/kubuno/drive"

[[bin]]
name = "kubuno-drive"
path = "src/main.rs"
required-features = ["server"]

[features]
# `server` = le module HTTP complet (par défaut). Les modules éditeurs dépendent
# de `kubuno-drive` avec `default-features = false` → seule la face `client`
# (dépendances légères) est compilée, et `kubuno-storage` n'est PAS tiré.
default = ["server"]
server = [
    "dep:tokio", "dep:axum", "dep:tower", "dep:tower-http", "dep:async-trait",
    "dep:sqlx", "dep:config", "dep:dotenvy", "dep:validator",
    "dep:tracing-subscriber", "dep:thiserror", "dep:chrono", "dep:futures",
    "dep:tokio-util", "dep:kubuno-storage", "dep:sha2", "dep:hex", "dep:clap",
    "dep:toml", "dep:aes-gcm", "dep:mime_guess", "dep:sanitize-filename",
    "dep:image", "dep:rand", "dep:notify", "dep:walkdir", "dep:zip",
    "dep:quick-xml", "dep:pdf-extract", "dep:url", "dep:urlencoding",
    "dep:flate2", "dep:argon2", "dep:tar", "dep:exif",
]

[dependencies]
# ── Face CLIENT (toujours compilée, légère) ──────────────────────────────────
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
uuid           = { workspace = true }
bytes          = { workspace = true }
base64         = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }

# ── Face SERVER (optionnelles, activées par la feature `server`) ──────────────
tokio          = { workspace = true, optional = true }
axum           = { workspace = true, optional = true }
tower          = { workspace = true, optional = true }
tower-http     = { workspace = true, optional = true }
async-trait    = { workspace = true, optional = true }
sqlx           = { workspace = true, optional = true }
config         = { workspace = true, optional = true }
dotenvy        = { workspace = true, optional = true }
validator      = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
thiserror      = { workspace = true, optional = true }
chrono         = { workspace = true, optional = true }
futures        = { workspace = true, optional = true }
tokio-util     = { workspace = true, optional = true }
kubuno-storage = { workspace = true, optional = true }
sha2           = { workspace = true, optional = true }
hex            = { workspace = true, optional = true }
clap           = { workspace = true, optional = true }
toml           = { workspace = true, optional = true }
aes-gcm           = { workspace = true, optional = true }
mime_guess        = { version = "2", optional = true }
sanitize-filename = { version = "0.5", optional = true }
image             = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"], optional = true }
rand              = { workspace = true, optional = true }
notify            = { version = "6", optional = true }
walkdir           = { version = "2", optional = true }
zip               = { version = "2", optional = true }
quick-xml         = { workspace = true, optional = true }
pdf-extract       = { version = "0.7", optional = true }
url               = { workspace = true, optional = true }
urlencoding       = { workspace = true, optional = true }
flate2            = { version = "1", optional = true }
argon2            = { workspace = true, optional = true }
tar               = { version = "0.4", optional = true }
exif              = { package = "kamadak-exif", version = "0.5", optional = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx  = { workspace = true }

# ─── Workspace mono-crate (deps tierces recopiées du monorepo kubuno/core ;
#     crates partagées consommées via dépendances git taguées) ───
[workspace]

[workspace.package]
version      = "0.1.0-alpha"
edition      = "2021"
authors      = ["Kubuno Contributors"]
license      = "AGPL-3.0"
repository   = "https://github.com/kubuno/kubuno"
rust-version = "1.82"

[workspace.dependencies]
# Async
tokio       = { version = "1",    features = ["full"] }
# CRDT Yjs côté serveur (consolidation GC des snapshots collab)
yrs         = "0.23"
axum        = { version = "0.7",  features = ["macros", "ws", "multipart"] }
tower       = { version = "0.5",  features = ["full"] }
tower-http  = { version = "0.6",  features = ["cors", "compression-gzip", "trace", "limit", "fs", "set-header", "timeout"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "tls-rustls", "bigdecimal"] }

# Sérialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & Crypto
jsonwebtoken = "9"
argon2       = "0.5"
aes-gcm      = "0.10"
rand         = "0.8"
sha2         = "0.10"
base64       = "0.22"

# HTTP Client (pour proxy modules + CLI upload)
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Config & Env
config  = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Logging & Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender   = "0.2"
tokio-util         = { version = "0.7", features = ["io"] }
kubuno-storage     = { git = "https://github.com/kubuno/core", tag = "storage-v0.1.0", package = "kubuno-storage" }
kubuno-seccomp     = { git = "https://github.com/kubuno/core", tag = "seccomp-v0.1.0", package = "kubuno-seccomp" }

# Erreurs
thiserror = "1"
anyhow    = "1"

# Utils
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes   = "1"
futures = "0.3"
hex     = "0.4"
toml    = "0.8"
clap    = { version = "4", features = ["color", "wrap_help", "derive", "env"] }
url                 = "2"
urlencoding         = "2"
tokio-tungstenite   = { version = "0.24", features = ["native-tls"] }
async-stream        = "0.3"
totp-rs             = { version = "5", features = ["gen_secret", "otpauth"] }
zip                 = "2"
quick-xml           = { version = "0.37", features = ["serialize"] }
